--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+
+# for local hosting
+# baseurl: ""  # Set to "" for local development
+# url: "http://localhost:4000"  # Localhost URL for local testing
+
+# for github hosting
 baseurl: "/alexander-mar.github.io" # Change this to match your repository name
 url: "https://alexander-mar.github.io" # Your GitHub Pages site URL
+
+
 twitter_username: jekyllrb
 github_username:  jekyll
 
