--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 # title: alexander marrapese
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Alexander Marrapese's personel website. With some books, writing, and mental models.
 
 # for local hosting
 # baseurl: ""  # Set to "" for local development
@@ -43,9 +41,26 @@ plugins:
   - jekyll-feed
 
 nav_links:
+  - title: "Home"
+    url: "/"
   - title: "Reading"
     url: "/reading/"
+  - title: "Writing"
+    url: "/writing/"
+  - title: "Thinking"
+    url: "/thinking/"
+  - title: "Projects"
+    url: "/projects/"
  
+collections:
+  pages:
+    output: true
+    permalink: /:name/
+  projects:
+      output: true
+      permalink: /projects/:name/
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
