--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,12 @@ description: >- # this means to ignore newlines until "baseurl:"
 # url: "http://localhost:4000"  # Localhost URL for local testing
 
 # for github hosting
-baseurl: "/alexander-mar.github.io" # Change this to match your repository name
-url: "https://alexander-mar.github.io" # Your GitHub Pages site URL
+# baseurl: "/alexander-mar.github.io" # Change this to match your repository name
+# url: "https://alexander-mar.github.io" # Your GitHub Pages site URL
 
+# testing
+baseurl: ""  # Keep it blank for GitHub Pages to work properly
+url: "https://alexander-mar.github.io"  # Your GitHub Pages site URL
 
 twitter_username: jekyllrb
 github_username:  jekyll
@@ -42,15 +45,16 @@ plugins:
 
 nav_links:
   - title: "Home"
-    url: "{{ '/' | relative_url }}"
+    url: "/"
   - title: "Reading"
-    url: "{{ '/reading/' | relative_url }}"
+    url: "/reading/"
   - title: "Writing"
-    url: "{{ '/writing/' | relative_url }}"
+    url: "/writing/"
   - title: "Thinking"
-    url: "{{ '/thinking/' | relative_url }}"
+    url: "/thinking/"
   - title: "Projects"
-    url: "{{ '/projects/' | relative_url }}"
+    url: "/projects/"
+
 
  
 collections:
