--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Alexander Marrapese's personel website. With some books, writing, and mental models.
 
 # for local hosting
-baseurl: ""  # Set to "" for local development
-url: "http://localhost:4000"  # Localhost URL for local testing
+#baseurl: ""  # Set to "" for local development
+#url: "http://localhost:4000"  # Localhost URL for local testing
 
 # for github hosting
 baseurl: "/alexander-mar.github.io" # Change this to match your repository name
